# fortranCFD

./: README.md
WORK/: CMakeLists.txt
WORK/DEBUG/HRR/SphericalFlame/: extract_peaks.py  igsource.inp  nohup.sh  post_HRRT.py  post_sphflame.py  sph_flame.inp
WORK/DEBUG/HRR/StabilizedFlame/: bound_flow.txt  equilHP_phi1.0_p1.0_T300.0.txt  extract_peaks.py  initial.txt  post_HRR.py  post_stabiflame.py  pre_equil.py  solver.inp  stabi_flame.inp
WORK/DEBUG/SEF/: rad_params.txt  rad_params_4sp.txt  solver.inp  sph_flame.inp
WORK/DEBUG/SEF/cantera_samplefile/: PMACs.yaml  otm.cpp
WORK/Examples/C3H8_Pachler/SphericalFlame/: README.md  bound_flow.txt  initial.txt  post_sphflame.py  solver.inp  sph_flame.inp
WORK/Examples/C3H8_SanDiego/SphericalFlame/: igsource.inp  initial.txt  solver.inp  sph_flame.inp
WORK/Examples/CH4_GRI3.0/MFR/: bound_flow.txt  equilTP_phi1.0_p1.0_T1300.0.txt  initial.txt  post_mfr.py  pre_equil.py  solver.inp
WORK/Examples/CH4_GRI3.0/PlanarFlame_Xe/: bound_flow.txt  initial.txt  pla_flame.inp  post_plaflame.py  solver.inp
WORK/Examples/CH4_GRI3.0/SOD/: initial.txt  post_sod.py  solver.inp
WORK/Examples/CH4_GRI3.0/SphericalFlame/: calc_Le.py  igsource.inp  initial.txt  run.sh  solver.inp
WORK/Examples/CH4_GRI3.0/SphericalFlame_iniT/: bound_flow.txt  extract_peaks_loop.py  initial.txt  post_cen_T_H.py  post_graph_cen_T_H.py  post_sph_peaks.py  post_sph_peaks_2.py  post_sphflame.py  sph_flame.inp
WORK/Examples/CH4_GRI3.0/SphericalFlame_radiation/: igsource.inp  initial.txt  post_sphflame.py  run.sh  sph_flame.inp
WORK/Examples/DME_DTU/DETONATION/: det.inp  initial.txt  post_det.py  solver.inp
WORK/Examples/DME_DTU/SOD/: post_sod.py  solver.inp
WORK/Examples/DME_DTU/Sedov/: bound_flow.txt  post_sedov.py  sedov.inp  solver.inp
WORK/Examples/DME_DTU/SphericalFlame/: extract_peaks.py  hdf_to_csv.py  igsource.inp  initial.txt  nohup.sh  post_sphflame.py  sph_flame.inp
WORK/Examples/DME_DTU/SphericalFlame_iniE/: compile.sh  hdf_to_csv.py  igsource.inp  solver.inp  sph_flame.inp
WORK/Examples/DME_Lusk39/SOD/: initial.txt  sod.inp  solver.inp
WORK/Examples/DME_Lusk39/SphericalFlame/: extract_peaks.py  igsource.inp  post_sphflame.py
WORK/Examples/DME_Lusk39/SphericalFlame_iniE/: bound_flow.txt  initial.txt  nohup.sh  post_sphflame.py  run.sh  solver.inp  sph_flame.inp
WORK/Examples/DME_Lusk39/SphericalFlame_t0/: sph_flame.inp
WORK/Examples/H2_LiDryer/SOD/: sod.inp  solver.inp
WORK/Examples/H2_LiDryer/SphericalFlame/: extract_peaks_loop.py  igsource.inp  initial.txt  post_sphflame.py  solver.inp  sph_flame.inp
WORK/Examples/H2_USCII/DETONATION/: det.inp  initial.txt  (+3 more)
(+356 files in other folders)
